# openstack-opentracing

./: .secrets.baseline  .travis.yml  README.md  jaeger_middleware.py  run-jaeger.sh  sample-paste.ini  setup.cfg  setup.py  test.py
openstack_opentracing/: eventlet_tracer.py  jaeger_initializer.py  jaeger_middleware.py  memcache_tracer.py  remote_sampler.py  tracer_factory.py
openstack_opentracing/instrumentation/: oslo_rpc.py
openstack_opentracing/test/: README.md  example_middleware.py  example_wsgi.py  server1.py  server2.py  server3.py  test-paste-2.ini  test-paste-3.ini  test-paste.ini  test_server.py  test_wsgi.py
tests/: test_middleware.py
