[metadata]
name = openstack_opentracing
author = Platform9 Systems, Inc
author-email = dev@platform9.com
description-file = README.md
home-page = https://github.com/platform9-incubator/openstack_opentracing
keywords=
        openstack
        opentracing
classifiers=
        Development Status :: 1 - Alpha
        Topic :: Utilities
        Environment :: Middleware
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

